--- a/public/index.css
+++ b/public/index.css
@@ -17,6 +17,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1abc8e', end
 
 }
 
+
+#login{margin-top: 50px;}
+
 input{max-width: 100%;
 
 }
